src/components/Project/NoteFeed/Note/Notes.module.scss
@import '../../../../styles/variables.scss';

section {
  display: flex;
  margin: 60px 10px;
}

section:not(:last-child) {
  .noteContainer {
    border-bottom: 2px solid rgba(0, 0, 0, 0.1);
  }
}

.avatarContainer {
  width: 75px;
}

.avatar {
  border-radius: 50%;
  width: 50px;
  height: 50px;
  margin: 10px 0;
}

.contentContainer {
  display: flex;
  flex-flow: column;
}

.expanded {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  width: 50%;
  .miniAvatarContainer {
    width: 40%;
    display: flex;
    flex-direction: row;
    align-items: center;
    margin-right: 1rem;

    button {
      &:focus {
        outline: none;
      }
      div {
        align-self: center;
        text-overflow: ellipsis;
        white-space: nowrap;
      }
    }
  }
}

.noteContainer {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  width: 100%;
  padding-bottom: 20px;
  padding-top: 10px;
  .noteHeader {
    display: flex;
    justify-content: space-between;
    font-size: 0.75rem;
    align-items: center;
  }
}

.noteBody {
  margin-bottom: 0.7rem;
  font-size: 1rem;
  color: $copy;
  line-height: 1.2rem;
}

.noteFooter {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  button {
    align-items: flex-start;
    background: none;
    border: none;
    color: $copy;
    font-size: 0.7rem;
    height: 25px;
    width: 45px;
  }
}

.miniAvatarContainer {
  display: flex;
  flex-wrap: wrap;
  img {
    height: 30px;
    width: 30px;
    border-radius: 50%;
    margin-top: 0.5vh;
  }
  p {
    font-size: 0.6rem;
    margin: 18px 0 0 5px;
  }
}

.collapsed {
  display: flex;
  &:hover {
    cursor: pointer;
  }
  img {
    margin-right: -6px;
    box-shadow: -2px 2px $light;
  }
  p {
    display: none;
  }
  button {
    display: none;
  }
}

.deleteButton {
  margin: 0 0.5rem;
}

